# llm-benchmark

./: README.md  main.py  pyproject.toml
tasks/bench-01/: bench.py
tasks/bench-01/init/: prompt.md
tasks/bench-01/init/ini2json/: .gitignore  CMakeLists.txt  README.md  justfile
tasks/bench-01/init/ini2json/include/ini2json/: ini2json.hpp
tasks/bench-01/init/ini2json/src/: CMakeLists.txt  ini2json.cpp  main.cpp
tasks/bench-01/init/rust/: Cargo.toml
tasks/bench-01/tester/tests/: cli_behavior_suite.py
tasks/bench-02/: bench.py
tasks/bench-02/init/: prompt.md
tasks/bench-02/init/libgit2/src/libgit2/: refdb_fs.c  repository.c  revparse.c
tasks/bench-02/qwen-3.6/: document.md
tasks/bench-02/qwen-3.6/.run/: evaluation.json  evaluation.json.opencode.jsonl  metadata.json  opencode.stdout.jsonl  session_export.json  session_export.stderr  tester.stdout
tasks/bench-02/qwen-3.6/libgit2/benchmarks/libgit2/: CMakeLists.txt
tasks/bench-02/qwen-3.6/libgit2/ci/: build.sh
tasks/bench-02/qwen-3.6/libgit2/script/api-docs/: docs-generator.js
tasks/bench-02/qwen-3.6/libgit2/src/libgit2/: index.c  indexer.c  midx.c  object.c  odb.c  pack-objects.c
tasks/bench-02/qwen-3.6/libgit2/src/libgit2/transports/: ssh_libssh2.c
tasks/bench-02/qwen-3.6/libgit2/src/util/: CMakeLists.txt
tasks/bench-02/qwen-3.6/libgit2/tests/libgit2/core/: opts.c
tasks/bench-02/tester/: document.md  evaluate_document.py
tasks/bench-03/: bench.py
tasks/bench-03/init/: Makefile  prompt.md  spec.md  toml
tasks/bench-03/init/include/: toml.h
tasks/bench-03/init/src/: main.c  toml.c
